Fix spacing on add-prod component.

--- a/src/app/add-product/add-product.component.scss
+++ b/src/app/add-product/add-product.component.scss
@@ -21,7 +21,7 @@ h3{
 }
 
 .row{
-  margin: 0 auto;
+  margin: 1% auto;
   width: 90%;
   text-align: center;
 }
@@ -32,9 +32,13 @@ h3{
 
 label{
   color: white;
-  //font-weight: bold;
   margin-top: .3rem;
   font-size: 1.2rem;
 }
+
+textarea{
+  padding: 1% 2%;
+}
+
 
 
